<resources>
    <string name="app_name">NvestLibrary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="header_life_assured_details">Life Insured Details</string>
    <string name="text_name_of_life_assured">Name of the Life Assured</string>
    <string name="text_dob">DATE OF BIRTH</string>
    <string name="text_gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_Frequency">At What Frequency You Want To Contribute To Fulfill The Need?</string>
    <string name="wealth_Frequency">Expected Payment frequency </string>
    <string name="select_state">Select State</string>
    <string name="select_state_city">Select State &amp; City</string>
    <string name="select_PT">Select PT</string>
    <string name="fund_strategy">Select Fund Strategy</string>
    <string name="select_PPT">Select PPT</string>
    <string name="select_mode">Select Mode</string>
    <string name="select_emr">Select EMR</string>
    <string name="select_flatextra">Select FlatExtra</string>
    <string name="select_sa">Select SA</string>
    <string name="name_customer">Customer Name</string>
    <string name="enter_amt">What Amount You Want For Child Education In Todays Terms</string>
    <string name="wealth_enter_amt">Desired Amount Required Then</string>
    <string name="retirement_enter_amt">Expected monthly retirement income (in todays terms) </string>
    <string name="retirement_already_enter_amt">How much have you already set aside as retirement fund?</string>
    <string name="already_amt">How Much Have You Already Set Aside For This Need?</string>
    <string name="requirement_frequency">At what frequency would you want to contirbute to fulfill the need? </string>
    <string name="current_deficit">Current Deficit</string>
    <string name="total_requirement">Total Requirement</string>
    <string name="select_mp">Select MP</string>
    <string name="select_ap">Select AP</string>
    <string name="select_mi">Select MI</string>
    <string name="select_samf">Select SAMF</string>
    <string name="select_city">Select City</string>
    <string name="text_smoking">Smoking</string>
    <string name="header_proposer_details">Proposer Details</string>
    <string name="text_email">EMAIL</string>
    <string name="text_mobile">MOBILE</string>
    <string name="text_branch_location">Branch Location</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_date_format">Date of birth</string>
    <string name="hint_type_email">Email</string>
    <string name="hint_type_mobile">Mobile</string>
    <string name="hint_select_state">State</string>
    <string name="hint_select_city">City</string>
    <string name="hint_select_branch">Branch</string>
    <string name="header_other_details">Other Details</string>
    <string name="text_child_age">CHILD AGE</string>
    <string name="text_pt">PT</string>
    <string name="text_ppt">PPT</string>
    <string name="text_mode">MODE</string>
    <string name="text_option_level_one">OPTION LEVEL 1</string>
    <string name="text_sum_assured">SUM ASSURED</string>
    <string name="text_sum_assured_in_words">SUM ASSURED IN WORD</string>
    <string name="text_modal_premium">MODAL PREMIUM</string>
    <string name="text_annual_premium">ANNUAL PREMIUM</string>
    <string name="text_add_rider">ADD RIDER</string>
    <string name="btn_text_validate">Validate</string>
    <string name="btn_text_done">Done</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="header_basic_information">Basic Information</string>
    <string name="header_product_information">Product Information</string>
    <string name="header_riders">Riders</string>
    <string name="header_summary">Summary</string>
    <string name="header_product_list">Product List</string>
    <string name="main_header_child_endowment_plan">CHILD ENDOWMENT PLAN</string>
    <string name="main_header_product_name">PRODUCT NAME</string>
    <string name="text_same_as_above">Same as above</string>
    <string name="search">Search</string>
    <string name="text_category">Category</string>
    <string name="search_product">Search Product</string>
    <string name="err_msg_email">Not a valid email address!</string>
    <string name="err_msg_number">Not a valid mobile number!</string>
    <string name="err_msg_city">Please select state first!</string>
    <string name="err_msg_branch">Please select city first!</string>
    <string name="error_dialog_header">Error</string>
    <string name="offline_mode_error">It seems you are offline.</string>
    <string name="error_display_information">Error occurred while displaying information</string>
    <string name="loading">Loading..</string>
    <string name="product_list_key">PRODUCT_LIST_KEY</string>;
    <string name="transaction_id_key">Transaction_Id_Key</string>;
    <string name="product_name_key">PRODUCT_NAME_KEY</string>;
    <string name="btn_text_proceed">Proceed</string>
    <string name="btn_text_generate_combo">Generate Combo</string>
    <string name="invalid_error"> </string>
    <string name="key_instance">KEY_INSTANCE_BASIC_INFORMATION</string>
    <string name="key_product_information_instance">KEY_INSTANCE_PRODUCT_INFORMATION</string>
    <string name="err_msg_ppt">Please select PT first!</string>
    <string name="select_value">Select</string>
    <string name="hint_pt">PT</string>
    <string name="hint_ppt">PPT</string>
    <string name="hint_mode">Mode</string>
    <string name="sum_assured">Sum Assured</string>
    <string name="hint_type_amount">Type Amount</string>
    <string name="modal_premium">Modal Premium</string>
    <string name="annual_premium">Annual Premium</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="rs">\u20B9</string>
    <string name="_rs">\u20B9 20000</string>
    <string name="hint_amount">Amount</string>
    <string name="text_funds">Funds</string>
    <string name="text_btn_validate">Validate</string>
    <string name="total_funds">Total</string>
    <string name="entered_funds_error">Minimum fund value should be 10%</string>
    <string name="entered_total_funds_error">Total must be 100%</string>
    <string name="validation_failed">Validation Failed</string>
    <string name="installment_premium">Installment Premium</string>
    <string name="goods_and_services_tax">Goods And Services Tax</string>
    <string name="inst_premium_with_gst">Inst. Premium With GST</string>
    <string name="text_generate_bi">Generate BI</string>
    <string name="bi_scenario">BI Scenario</string>
    <string name="tax_bracket">Tax Bracket</string>
    <string name="tax_benefit_type">Tax Benefit Type </string>
    <string name="utilized_80c_limit">Utilized 80C Limit</string>
    <string name="my_chart">My Chart</string>
    <string name="empty_validation_error">Fields marked with red are mandatory.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="plan_name">Plan Name</string>

    <string name="Rs">\u20B9</string>

    <string name="rider_name">Rider Name</string>
    <string name="permission_storage_explanation">In order to save pdf on internal storage we need storage permission. We can\'t move ahead without this permission.</string>
    <string name="permission_storage_request_dialog_btn">Request</string>
    <string name="permission_storage_not_now_dialog_btn">Not now</string>
    <string name="permission_storage_permission_denied_dialog_title">Permission denied</string>
    <string name="permission_storage_permission_denied_message">In order to save pdf on internal storage we need storage permission. We can\'t move ahead without this permission. Are you sure you want to deny this permission?</string>
    <string name="permission_storage_i_am_sure_dialog_btn">I\'m sure</string>
    <string name="permission_storage_retry_dialog_btn">Retry</string>
    <string name="btn_text_download_pdf">Download PDF</string>
    <string name="total">Total</string>
    <string name="enter_amount">Enter amount</string>
    <string name="minimum_one_rider">Please select at least one rider or skip</string>
    <string name="all_fields_with_red_are_mandatory">All field marked with red are mandatory</string>
    <string name="skip">Skip</string>
    <string name="_percent">%</string>
    <string name="sync_status">Data Sync Started</string>
    <string name="default_zero_percent">0 %</string>
    <string name="total_fund_percent_error">Total fund percentage should be 100%. Kindly revise the same.</string>
    <string name="select_at_least_one_fund_strategy">Please select at least one fund strategy</string>
    <string name="customer_information">Customer Information</string>
    <string name="select">Select</string>
    <string name="hint_total_premium">Total premium</string>
    <string name="hint_select_dob">Select Dob</string>
    <string name="label_mode">Mode</string>
    <string name="label_standard_age_proof">Standard age proof</string>
    <string name="label_channel">Channel</string>
    <string name="hint_age">Age</string>
    <string name="solutionProducts">Products</string>
    <string name="save">Save</string>




    <!--THIS IS FOR TESTING-->
    <string name="app_name1">Bottom Navigation</string>
    <string name="title_shop">Needs</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_sync">Sync</string>

    <string name="choose_goal">Choose your Lifegoal</string>
    <string name="welcome_advisor">Welcome Advisor</string>
    <string name="select_life_goal">Select Life Goal To Get Started</string>

</resources>
