<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        android:id="@+id/product_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/product_name_layout"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/choose_goal"
            android:gravity="center"
            android:textSize="@dimen/_14sp" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_advisor"
        android:textSize="@dimen/_18sp"
        android:gravity="center"
        android:padding="@dimen/_10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_life_goal"
        android:textSize="@dimen/_12sp"
        android:gravity="center"
        android:padding="@dimen/_10dp"
        />



    <android.support.v7.widget.RecyclerView
        android:id="@+id/needRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/includeLayout" />

</LinearLayout>
