<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_basic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
             />

        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_16sp"
            tools:text="Validating values" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/solution_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutProgress"
        android:background="@color/colorRed"
        android:minHeight="@dimen/title_minimum_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_solution_name"
            style="@style/Title"
            tools:text="Title goes here" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_layout"
        android:layout_below="@+id/solution_name_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <RelativeLayout
                android:id="@+id/customerInformationSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvSectionCustomerInformation"
                    style="@style/TextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_information" />

                <TextView
                    android:id="@+id/tvLabelName"
                    style="@style/FieldLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvSectionCustomerInformation"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_name_of_life_assured" />


                <LinearLayout
                    android:id="@+id/layoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvLabelName"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/etFirstName"
                        style="@style/InputMaterialEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0.5"
                        android:hint="@string/hint_first_name"
                        android:inputType="textPersonName" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/etLastName"
                        style="@style/InputMaterialEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="0.5"
                        android:hint="@string/hint_last_name"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutName"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelGender"
                        style="@style/FieldLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_gender" />

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spGender"
                        style="@style/InputSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/select" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutDobAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutGender"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:id="@+id/layoutDob"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvLabelDob"
                            style="@style/FieldLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_date_format" />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/etDob"
                            style="@style/InputMaterialEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="false"
                            android:drawableEnd="@drawable/ic_dob"
                            android:focusable="false"
                            android:hint="@string/hint_select_dob"
                            android:inputType="textPersonName"
                            app:met_floatingLabel="none" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutAge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvLabelAge"
                            style="@style/FieldLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_age" />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/etAge"
                            style="@style/InputMaterialEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:inputType="textPersonName"
                            app:met_floatingLabel="none" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/layoutTotalPremium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutDobAge"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelTotalPremium"
                        style="@style/FieldLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_total_premium" />

                    <nvest.com.nvestlibrary.customView.PrefixEditText
                        android:id="@+id/etTotalPremium"
                        style="@style/InputMaterialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="10"
                        app:met_floatingLabel="none" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutTotalPremium"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelMode"
                        style="@style/FieldLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_mode" />

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spMode"
                        style="@style/InputSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/select"
                        app:ms_dropdown_max_height="200dp" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/productsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customerInformationSection"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tvSectionProducts"
                    style="@style/TextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/solutionProducts" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvSectionProducts"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_combo_product" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnGenerateCombo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRed"
            android:text="@string/btn_text_generate_combo"
            android:textAllCaps="false"

            android:textColor="@android:color/white" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/touchLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>