<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/resultLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <LinearLayout
        android:id="@+id/bottomLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">
        <LinearLayout
            android:id="@+id/deficit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5"
            >

            <TextView
                android:id="@+id/text_deficit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_deficit"
                android:layout_marginBottom="@dimen/_16dp"
                android:layout_marginTop="@dimen/_8dp"
                android:textAlignment="center"
                android:gravity="center"

                />

            <TextView
                android:id="@+id/text_amt_deficit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_rs"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/_16dp"
                android:textColor="@color/blackBG"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/total_req_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5"
            >

            <TextView
                android:id="@+id/text_total_requirement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_requirement"
                android:layout_marginBottom="@dimen/_16dp"
                android:layout_marginTop="@dimen/_8dp"
                android:gravity="center"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/text_amt_total_requirement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_rs"
                android:layout_marginBottom="@dimen/_16dp"
                android:textColor="@color/blackBG"
                android:textAlignment="center"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>